graph company data

--- a/client/styles/style.less
+++ b/client/styles/style.less
@@ -88,4 +88,28 @@ button {
       }
     }
   }
+
+  .companies {
+    flex: 1;
+    overflow: auto;
+    padding: 50px;
+
+    .company {
+      display: flex;
+      align-items: center;
+      position: relative;
+      margin-bottom: 20px;
+
+      .avatar {
+        width: 100px;
+        text-align: center;
+      }
+
+      .graph {
+        flex: 1;
+        position: relative;
+        height: 100px;
+      }
+    }
+  }
 }
