rename to portfolio insights

--- a/client/styles/style.less
+++ b/client/styles/style.less
@@ -19,7 +19,7 @@
 // get the page ready
 * { outline: none; box-sizing: border-box; }
 body { padding: 0; margin: 0; }
-html, body, .stock-insights { height: 100%; width: 100%; position: absolute; top: 0; right: 0; overflow: hidden;}
+html, body, .portfolio-insights { height: 100%; width: 100%; position: absolute; top: 0; right: 0; overflow: hidden;}
 body, button, input {
   font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
   font-size: 1em;
@@ -55,11 +55,11 @@ button {
 }
 
 // let the real CSS begin
-.stock-insights {
+.portfolio-insights {
   display: flex;
   flex-direction: column;
 
-  .stock-insights-title {
+  .portfolio-insights-title {
     height: 80px;
     color: #fff;
     background-color: @accent-color;
