--- a/client/styles/style.less
+++ b/client/styles/style.less
@@ -89,10 +89,42 @@ button {
     }
   }
 
+  .company-searcher {
+    margin: 20px 50px 0px 50px;
+    position: relative;
+    width: calc(~'100% - 100px');
+    z-index: 300;
+    height: 40px;
+
+    input {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      padding: 5px;
+    }
+
+    .potential-companies {
+      position: absolute;
+      width: 100%;
+      top: 100%;
+    }
+
+    .potential-company {
+      background-color: @accent-color;
+      padding: 5px;
+      color: #fff;
+
+      &:hover {
+        background-color: @accent-color2;
+      }
+    }
+  }
+
   .companies {
     flex: 1;
     overflow: auto;
-    padding: 50px;
+    padding: 20px 50px 50px;
 
     .company {
       display: flex;
