add UI for removing companies

--- a/client/styles/constants.less
+++ b/client/styles/constants.less
@@ -16,6 +16,7 @@
 
 @accent-color: #4292c6;
 @accent-color2: #08306b;
+@anti-accent: #cb181d;
 @background-color: #f0f0f0;
 @secondary-text-color: #969696;
 
