--- a/client/styles/style.less
+++ b/client/styles/style.less
@@ -132,6 +132,18 @@ button {
       position: relative;
       margin-bottom: 20px;
 
+      .remove {
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        left: -30px;
+        top: calc(~'50% - 10px');
+
+        .minus {
+          fill: @anti-accent;
+        }
+      }
+
       .avatar {
         width: 100px;
         text-align: center;
