have clicking on "avatar" load sentiment data w/ a fun animation

--- a/client/styles/animations.less
+++ b/client/styles/animations.less
@@ -14,24 +14,11 @@
 // limitations under the License.
 //------------------------------------------------------------------------------
 
-@accent-color: #4292c6;
-@accent-color2: #08306b;
-@background-color: #f0f0f0;
-@secondary-text-color: #969696;
-
-@negative-color: #cb181d;
-@positive-color: #08306b;
-
-@stock-chiclets-z: 500;
-
-@thumb-radius: 2px;
-@thumb-height: 24px;
-@thumb-width: 12px;
-@thumb-border-width: 1px;
-@thumb-border-color: #fff;
-
-@track-width: 100%;
-@track-height: 5px;
-
-@track-radius: 5px;
-@contrast: 5%;
+@keyframes rotate {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
