--- a/client/styles/style.less
+++ b/client/styles/style.less
@@ -15,6 +15,7 @@
 //------------------------------------------------------------------------------
 
 @import './constants.less';
+@import './animations.less';
 
 // get the page ready
 * { outline: none; box-sizing: border-box; }
@@ -136,23 +137,61 @@ button {
         width: 20px;
         height: 20px;
         position: absolute;
-        left: -30px;
+        left: -23px;
         top: calc(~'50% - 10px');
+        cursor: pointer;
 
         .minus {
-          fill: @anti-accent;
+          fill: @negative-color;
         }
-      }
-
-      .avatar {
-        width: 100px;
-        text-align: center;
       }
 
       .graph {
         flex: 1;
         position: relative;
         height: 100px;
+
+        &.loading {
+          line-height: 100px;
+          text-indent: 40px;
+        }
+      }
+    }
+
+    .avatar {
+      width: 120px;
+      height: 120px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      cursor: pointer;
+      h4 { color: @accent-color; }
+      .description { font-size: 0.8em; }
+      .neg  { color: @negative-color; }
+      .pos  { color: @positive-color; }
+      .neut { color: @secondary-text-color; }
+
+      // loading animation
+      transition: border 0.4s ease-out;
+      border: 0.2px solid transparent;
+      border-radius: 100%;
+      &.loading {
+        position: relative;
+        border: 3px solid @accent-color;
+      }
+      &.loading:after {
+        content: '';
+        background: trasparent;
+        width: 120%;
+        height: 120%;
+        position: absolute;
+        border-radius: 100%;
+        top: -10%;
+        left: -10%;
+        opacity: 0.7;
+        box-shadow: @accent-color -4px -5px 3px -3px;
+        animation: rotate 2s infinite linear;
       }
     }
   }
