--- a/client/styles/style.less
+++ b/client/styles/style.less
@@ -129,6 +129,7 @@ button {
 
     .company {
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
       position: relative;
       margin-bottom: 20px;
@@ -147,7 +148,7 @@ button {
       }
 
       .graph {
-        flex: 1;
+        flex: 1 1px;
         position: relative;
         height: 100px;
 
@@ -165,6 +166,7 @@ button {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      position: relative;
       cursor: pointer;
       h4 { color: @accent-color; }
       .description { font-size: 0.8em; }
@@ -177,7 +179,6 @@ button {
       border: 0.2px solid transparent;
       border-radius: 100%;
       &.loading {
-        position: relative;
         border: 3px solid @accent-color;
       }
       &.loading:after {
@@ -192,6 +193,45 @@ button {
         opacity: 0.7;
         box-shadow: @accent-color -4px -5px 3px -3px;
         animation: rotate 2s infinite linear;
+      }
+    }
+
+    .entity-bubble-chart {
+      flex: 1 100%;
+      height: 400px;
+      position: relative;
+      display: flex;
+      user-select: none;
+      justify-content: center;
+      .bubble-chart-text {
+        /* Center text in the circle, and hide any overflow */
+        .bubble-label {
+          text-align: center;
+          overflow: hidden;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: space-around;
+          border-radius: 50%;
+          will-change: left, top, height, width;
+          /* Show the overflow when hovering over a label */
+          &:hover {
+            overflow: visible;
+            font-weight: bold;
+          }
+          /* Optional, but recommended - reduce the size of text on medium bubbles */
+          &.medium {
+            font-size: 0.8em;
+          }
+          /* Optional, but recommended - hide the text on small bubbles */
+          &.small {
+            font-size: 0;
+            /* Make sure to unhide the text when hovering */
+            &:hover {
+              font-size: 0.8em;
+            }
+          }
+        }
       }
     }
   }
