fix linting errors

--- a/client/styles/constants.less
+++ b/client/styles/constants.less
@@ -20,7 +20,7 @@
 @secondary-text-color: #969696;
 
 @negative-color: #cb181d;
-@positive-color: #08306b;
+@positive-color: #2ca02c;
 
 @stock-chiclets-z: 500;
 
